Endpoints from list done, rewrited few thinks for better loggin and to fix warnings from resaults checker
